--- a/packages/setting-colors/index.scss
+++ b/packages/setting-colors/index.scss
@@ -1,14 +1,14 @@
 /* ==========================================================================
    #COLOR PALETTES
    ========================================================================== */
-@import '../setting-colors/package.json';
-@import '~@bolt/setting-module-manager';
-
-@include add-module(
-  $module-name: $name,
-  $module-version: $version,
-  $module-dependencies: ()
-);
+// @import '../setting-colors/package.json';
+// @import '~@bolt/setting-module-manager';
+// 
+// @include add-module(
+//   $module-name: $name,
+//   $module-version: $version,
+//   $module-dependencies: ()
+// );
 
 
 $palettes: (
