--- a/packages/setting-global/index.scss
+++ b/packages/setting-global/index.scss
@@ -1,14 +1,14 @@
 /* ==========================================================================
    #GLOBAL SETTINGS
    ========================================================================== */
-@import '../setting-global/package.json';
-@import '~@bolt/setting-module-manager';
-   
-@include add-module(
-  $module-name: $name,
-  $module-version: $version,
-  $module-dependencies: ()
-);
+// @import '../setting-global/package.json';
+// @import '~@bolt/setting-module-manager';
+//    
+// @include add-module(
+//   $module-name: $name,
+//   $module-version: $version,
+//   $module-dependencies: ()
+// );
 
 
 $global-font-size: 16px;
