--- a/packages/tool-font-size/index.scss
+++ b/packages/tool-font-size/index.scss
@@ -1,19 +1,24 @@
 /* ==========================================================================
    #FONT-WEIGHT
    ========================================================================== */
-@import '~@bolt/setting-module-manager';
-@import '../tools-font-size/package.json';
-@import 'node_modules/sassy-maps/sass/sassy-maps';
+// @import '~@bolt/setting-module-manager';
+@import 'node_modules/@bolt/setting-global/index';
+@import 'node_modules/@bolt/setting-modular-scale/index';
 
-  
-@include add-module(
-  $module-name: $name,
-  $module-version: $version,
-  $module-dependencies: (
-    'setting-modular-scale': '0.1.0-alpha.1',
-    'tool-strip-unit': '0.1.0-alpha.1'
-  )
-);
+
+@import 'node_modules/@bolt/tool-strip-unit/index';
+@import 'node_modules/@bolt/tools-sassy-maps/index';
+
+//   
+// @import '../tools-font-size/package.json';
+// @include add-module(
+//   $module-name: $name,
+//   $module-version: $version,
+//   $module-dependencies: (
+//     'setting-modular-scale': '0.1.0-alpha.1',
+//     'tool-strip-unit': '0.1.0-alpha.1'
+//   )
+// );
 
 /**
   * Abstracts how font sizes are grabbed and used via modular
@@ -41,7 +46,7 @@ $font-cap-height: 	0.7;
 
 @mixin font-size($size, $line-height: '', $important: '') {
   $font-size: nth(map-get-deep($modular-scale, 'font_sizes', $size), 1);
-  $font-size-px: strip-unit($font-size) * $global-font-size;
+  $font-size-px:  strip-unit($font-size) * $global-font-size;
 
   $lines: ceil(($font-size-px + 0.001px) / $rhythm);
 
