Fixing missing dependency in Build Task

--- a/packages/bolt/bolt.css
+++ b/packages/bolt/bolt.css
@@ -137,6 +137,24 @@
   pointer-events: none;
 }
 
+.c-bolt-button--flat {
+  color: currentColor;
+  background-color: transparent;
+  border-color: currentColor;
+}
+
+.c-bolt-button--flat:hover {
+  color: currentColor;
+  background-color: rgba(59, 59, 59, 0.235);
+  border-color: currentColor;
+}
+
+.c-bolt-button--flat:focus, .c-bolt-button--flat:active {
+  color: currentColor;
+  background-color: rgba(28, 28, 28, 0.37);
+  border-color: currentColor;
+}
+
 p {
   color: red;
 }
