--- a/packages/setting-module-manager/index.scss
+++ b/packages/setting-module-manager/index.scss
@@ -4,7 +4,7 @@
 // @import '../setting-colors/package.json';
 // @import '~@bolt/tools-module-manager'
 
-@import 'node_modules/sass-versioning/dist/_index';
+@import 'sass-versioning';
 @import 'str-replace';
 @import 'to-list';
 @import 'add-modules';
