--- a/packages/tool-button-color/index.scss
+++ b/packages/tool-button-color/index.scss
@@ -4,7 +4,7 @@
 
 /** Generate different background and border color button interaction states based on the primary color passed in **/
 // @import '~@bolt/setting-module-manager';
-@import 'node_modules/@bolt/tools-text-contrast/index.scss';
+@import '@bolt/tools-text-contrast';
 // @import '../tools-font-size/package.json';
 // @import 'node_modules/sassy-maps/sass/sassy-maps';
 
