--- a/packages/tool-color-palette/index.scss
+++ b/packages/tool-color-palette/index.scss
@@ -5,8 +5,8 @@
 /**
   * Helper functions for applying global color swatches stored in Sass Maps
   */
-@import 'node_modules/@bolt/setting-colors/index.scss';
-@import 'node_modules/@bolt/tools-sassy-maps/index.scss'; //So map-get-deep works
+@import '@bolt/setting-colors';
+@import '@bolt/tools-sassy-maps'; //So map-get-deep works
 
 // @include add-module(
 //   $name:    'tools.color-palette',
