--- a/packages/tool-font-size/index.scss
+++ b/packages/tool-font-size/index.scss
@@ -2,12 +2,10 @@
    #FONT-WEIGHT
    ========================================================================== */
 // @import '~@bolt/setting-module-manager';
-@import 'node_modules/@bolt/setting-global/index';
-@import 'node_modules/@bolt/setting-modular-scale/index';
-
-
-@import 'node_modules/@bolt/tool-strip-unit/index';
-@import 'node_modules/@bolt/tools-sassy-maps/index';
+@import '@bolt/setting-global';
+@import '@bolt/setting-modular-scale';
+@import '@bolt/tool-strip-unit';
+@import '@bolt/tools-sassy-maps';
 
 //   
 // @import '../tools-font-size/package.json';
