--- a/packages/bolt/bolt.scss
+++ b/packages/bolt/bolt.scss
@@ -1,15 +1,12 @@
-// @import '~@bolt/component-button';
-// @import '~@bolt/setting-module-manager';
 
-// @import '~@bolt/setting-modular-scale';
-// @import '~@bolt/tools-font-weight';
-// @import '~@bolt/tools-no-select';
-// @import '~@bolt/tools-font-size';
-// @import './node_modules/@bolt/setting-colors/index.scss';
+$btn-bg-color: #ff561d;
+@import '@bolt/components-button';
+// @import '@bolt/objects-grid';
 // 
-@import '~@bolt/component-button';
 
 
-p {
-  color: red;
+.c-button {
+  @include button();
+  @include button-color(purple);
 }
+
