--- a/packages/setting-modular-scale/index.scss
+++ b/packages/setting-modular-scale/index.scss
@@ -7,18 +7,15 @@
   * http://www.modularscale.com/?16&px&1.2&sass&text
   */
 
-@import 'node_modules/modularscale-sass/stylesheets/_modularscale.scss';
+@import 'modularscale-sass/stylesheets/modularscale';
 
 // @include add-module(
 //   $name:    'settings.modular-scale',
 //   $version: '1.0.0',
 //   $dependencies: ()
 // );
-
 $ms-base: 1rem;
 $ms-ratio: 1.2;
-
-
 $modular-scale: (
   'font_sizes': (
     xxxxlarge:   ms(8) 4, //  ~68.797px
