--- a/packages/tools-no-select/index.scss
+++ b/packages/tools-no-select/index.scss
@@ -11,8 +11,5 @@
 // );
 
 @mixin no-select {
-  -webkit-user-select: none;  /* Chrome all / Safari all */
-  -moz-user-select: none;     /* Firefox all */
-  -ms-user-select: none;      /* IE 10+ */
-  user-select: none;          /* Likely future */
+  user-select: none; // Autoprefixed so no vendor prefixes needed
 }
