--- a/packages/bolt/bolt.scss
+++ b/packages/bolt/bolt.scss
@@ -1,9 +1,57 @@
+/*------------------------------------*\
+  Settings
+\*------------------------------------*/
+
+@import '@bolt/settings-typography';
+
+
+/*------------------------------------*\
+  Tools
+\*------------------------------------*/
+
+@import '@bolt/tools-typography';
+
+
+/*------------------------------------*\
+  Generic
+\*------------------------------------*/
+
+@import '@bolt/generics-typography';
+
+
+/*------------------------------------*\
+  Elements
+\*------------------------------------*/
+
+
+/*------------------------------------*\
+  Objects
+\*------------------------------------*/
+
+// @import '@bolt/objects-grid';
+
+
+/*------------------------------------*\
+  Components
+\*------------------------------------*/
 
 $btn-bg-color: #ff561d;
 @import '@bolt/components-button';
-// @import '@bolt/objects-grid';
-// 
 
+
+/*------------------------------------*\
+  Themes
+\*------------------------------------*/
+
+
+/*------------------------------------*\
+  Utilities
+\*------------------------------------*/
+
+
+/*------------------------------------*\
+  Shame
+\*------------------------------------*/
 
 .c-button {
   @include button();
