--- a/packages/bolt/bolt.scss
+++ b/packages/bolt/bolt.scss
@@ -2,6 +2,7 @@
   Settings
 \*------------------------------------*/
 
+@import '@bolt/settings-breakpoints';
 @import '@bolt/settings-typography';
 
 
@@ -9,6 +10,7 @@
   Tools
 \*------------------------------------*/
 
+@import '@bolt/tools-breakpoints';
 @import '@bolt/tools-typography';
 
 
